// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabSectionHeader (Task #1048) > renderiza apenas título + count, sem subtítulo nem actions (variante 'Meus Agentes') 1`] = `
<div
  class=""
>
  <div>
    <h2
      class="text-sm font-semibold text-lia-text-primary flex items-center gap-2"
    >
      <span>
        Meus Agentes
      </span>
      <span
        class="ml-2 px-2 py-0.5 rounded-full text-[10px] font-bold bg-lia-interactive-active text-lia-text-primary"
      >
        5
      </span>
    </h2>
  </div>
</div>
`;

exports[`TabSectionHeader (Task #1048) > renderiza apenas título + subtítulo (variante mínima) 1`] = `
<div
  class=""
>
  <div>
    <h2
      class="text-sm font-semibold text-lia-text-primary flex items-center gap-2"
    >
      <span>
        Gêmeos Digitais
      </span>
    </h2>
    <p
      class="text-xs text-lia-text-secondary mt-0.5"
    >
      Clone seu raciocínio
    </p>
  </div>
</div>
`;

exports[`TabSectionHeader (Task #1048) > renderiza com count badge + actions (variante Personalizados) 1`] = `
<div
  class="flex items-center justify-between"
>
  <div>
    <h2
      class="text-sm font-semibold text-lia-text-primary flex items-center gap-2"
    >
      <span>
        Agentes Personalizados
      </span>
      <span
        class="ml-2 px-2 py-0.5 rounded-full text-[10px] font-bold bg-lia-interactive-active text-lia-text-primary"
      >
        3
      </span>
    </h2>
    <p
      class="text-xs text-lia-text-secondary mt-0.5"
    >
      Seus agentes customizados
    </p>
  </div>
  <div>
    <button
      type="button"
    >
      + Novo
    </button>
  </div>
</div>
`;

exports[`TabSectionHeader (Task #1048) > renderiza com ícone + actions (variante Marketplace) 1`] = `
<div
  class="flex items-center justify-between"
>
  <div>
    <h2
      class="text-sm font-semibold text-lia-text-primary flex items-center gap-2"
    >
      <span
        data-testid="icon"
      >
        ★
      </span>
      <span>
        Marketplace
      </span>
    </h2>
    <p
      class="text-xs text-lia-text-secondary mt-0.5"
    >
      Agentes prontos da comunidade
    </p>
  </div>
  <div>
    <button
      type="button"
    >
      Ver tudo
    </button>
  </div>
</div>
`;

exports[`TabSectionHeader (Task #1048) > renderiza com ícone, sem subtítulo nem actions (variante 'Como funciona') 1`] = `
<div
  class=""
>
  <div>
    <h2
      class="text-sm font-semibold text-lia-text-primary flex items-center gap-2"
    >
      <span
        data-testid="brain-icon"
      >
        🧠
      </span>
      <span>
        Como funciona
      </span>
    </h2>
  </div>
</div>
`;
